compiler/tools/fpp-check/test/redef/module_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_constant.fpp: 2.1
constant M = 0
^
error: redefinition of symbol M
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_constant.fpp: 1.1
module M { }
^
